--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="fragments/common :: head('Hello, Spring Boot!')">
+<head th:replace="fragments/common :: head('게시판')">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,13 +9,13 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link href="starter-template.css" rel="stylesheet">
+    <link href="starter-template.css" th:href="@{/starter-template.css}" rel="stylesheet">
 
-    <title>Spring Boot!</title>
+    <title>게시판</title>
 </head>
 
 <body>
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" th:replace="fragments/common :: menu('home')">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" th:replace="fragments/common :: menu('board')">
     <!-- <a class="navbar-brand" href="#">Spring Boot Tutorial</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
         aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,15 +33,28 @@
     </div> -->
 </nav>
 
-<main role="main" class="container">
-
-    <div class="starter-template">
-        <h1>Srping Boot Jpa</h1>
-        <p class="lead">Spring Boot을 이용해 웹 페이지 제작<br>
-            Spring Security, JPA를 이용해 보안 설정과 데이터 다루기</p>
+<div class="container">
+    <h2>게시판</h2>
+    <div>총 건수 : <span th:text="${#lists.size(boards)}"></span></div>
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th scope="col">번호</th>
+            <th scope="col">제목</th>
+            <th scope="col">작성자</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="board : ${boards}">
+            <td th:text="${board.id}">Mark</td>
+            <td><a th:text="${board.title}" th:href="@{form(id=${board.id})}">Otto</a></td>
+            <td th:text="${board.user?.username}">홍길동</td>
+        </tr>
+    </table>
+    <div class="text-right">
+        <a type="button" class="btn btn-primary" th:href="@{/board/form}">쓰기</a>
     </div>
-
-</main>
+</div>
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
